--- a/project/package.json
+++ b/project/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
+    "@types/node": "^22.13.10",
+    "path": "^0.12.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.3.0",
+    "sass": "^1.85.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -24,6 +30,7 @@
     "globals": "^15.15.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.1",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
