--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,8 @@ services:
     build:
       context: ./project
     container_name: project
+    environment:
+      - VITE_API_URL=https://api.project.com
     restart: on-failure
     ports:
       - '3000:3000'
