--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -5,9 +5,8 @@ RUN yarn install --frozen-lockfile
 COPY . .
 RUN yarn build --mode production
 
-FROM node:23.9-alpine3.20
-RUN npm install -g serve
-COPY --from=build /app/dist /app/dist
-WORKDIR /app
+FROM nginx:1.25-alpine
+COPY --from=build /app/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 3000
-CMD ["serve", "-s", "dist", "-l", "3000"]
+CMD ["nginx", "-g", "daemon off;"]
