--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
       "eslint",
       "prettier"
     ],
-    "*.{json,css,scss,md}": [
+    "*.{css,scss}": [
       "prettier"
     ]
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "lint:fix": "eslint --fix . && prettier --write .",
     "preview": "vite preview",
@@ -23,7 +23,6 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
     "@types/node": "^22.14.1",
-    "path": "^0.12.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
@@ -38,15 +37,14 @@
     "@typescript-eslint/parser": "^8.31.0",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.1",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.0.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.1",
     "prettier": "^3.5.3",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.31.0",
     "vite": "^6.3.2",
     "vite-plugin-svgr": "^4.3.0"
   }
