--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "lint-staged": "^15.5.1",
     "prettier": "^3.5.3",
     "typescript": "~5.8.3",
+    "typescript-eslint": "^8.32.1",
     "vite": "^6.3.2",
     "vite-plugin-svgr": "^4.3.0"
   }
