--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.1",
+    "react-toastify": "^11.0.5",
     "sass": "^1.87.0"
   },
   "devDependencies": {
