--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -29,6 +29,9 @@
       "@assets/*": [
         "src/assets/*"
       ],
+      "@entities/*": [
+        "src/entities/*"
+      ],
       "@/*": [
         "src/*"
       ]
