--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,9 +2,9 @@ services:
   project:
     build:
       context: ./
+      args:
+        VITE_API_URL: ${VITE_API_URL}
     container_name: project
-    environment:
-      - VITE_API_URL=https://api.project.com
     restart: on-failure
     ports:
       - '3000:3000'
